# brain-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  project.md
brain-cli/: Cargo.toml
brain-cli/src/: main.rs  output.rs
brain-cli/src/commands/: init.rs  mod.rs  reindex.rs  serve.rs  status.rs  stop.rs
brain-cli/tests/: e2e.rs
brain-core/: Cargo.toml
brain-core/src/: config.rs  error.rs  id.rs  lib.rs  mocks.rs  model.rs  ports.rs  service.rs
brain-embed/: Cargo.toml
brain-embed/src/: lib.rs  onnx.rs  openai.rs
brain-index/: Cargo.toml
brain-index/src/: adapter.rs  lib.rs
brain-mcp-proto/: Cargo.toml
brain-mcp-proto/src/: handler.rs  jsonrpc.rs  lib.rs  schema.rs
brain-server/: Cargo.toml
brain-server/src/: http.rs  lib.rs  lifecycle.rs  singleton.rs
brain-vault/: Cargo.toml
brain-vault/src/: adapter.rs  frontmatter.rs  lib.rs  template.rs
config/: default.toml
