[workspace]
resolver = "2"
members = [
    "brain-core",
    "brain-vault",
    "brain-embed",
    "brain-index",
    "brain-mcp-proto",
    "brain-server",
    "brain-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
brain-core = { path = "brain-core" }
brain-vault = { path = "brain-vault" }
brain-embed = { path = "brain-embed" }
brain-index = { path = "brain-index" }
brain-mcp-proto = { path = "brain-mcp-proto" }
brain-server = { path = "brain-server" }
