[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain-mcp"
path = "src/main.rs"

[dependencies]
brain-core = { workspace = true }
brain-vault = { workspace = true }
brain-embed = { workspace = true }
brain-index = { workspace = true }
brain-mcp-proto = { workspace = true }
brain-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
