[package]
name = "brain-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brain-mcp"
path = "src/main.rs"

[features]
local-embeddings = ["brain-embed/local-embeddings"]

[dependencies]
brain-core = { workspace = true }
brain-vault = { workspace = true }
brain-embed = { workspace = true }
brain-index = { workspace = true }
brain-mcp-proto = { workspace = true }
brain-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"
rustyline = "15"
toml = "1"
dirs = "6"
libc = "0.2"
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8", features = ["json"] }
