[package]
name = "brain-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
slug = "0.1"
tracing = { workspace = true }
dirs = "6"

[dev-dependencies]
tokio = { workspace = true }
toml = "0.8"
