[package]
name = "brain-embed"
version.workspace = true
edition.workspace = true

[dependencies]
brain-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
