[package]
name = "brain-embed"
version.workspace = true
edition.workspace = true

[features]
local-embeddings = ["ort", "tokenizers", "ndarray"]

[dependencies]
brain-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }

# ONNX local embeddings (behind feature flag)
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
dirs = "6"
