[package]
name = "brain-index"
version.workspace = true
edition.workspace = true

[dependencies]
brain-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
