[package]
name = "brain-server"
version.workspace = true
edition.workspace = true

[dependencies]
brain-core = { workspace = true }
brain-mcp-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
fs2 = "0.4"
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
